Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "" # Enter your telegram bot token
-OWNER_ID = "" # Enter your telegram user id
-TELEGRAM_API = "" # Enter telegram API key
-TELEGRAM_HASH = "" # Enter telegram API hash
+BOT_TOKEN = "7928809829:AAGOCx8XwPis0GC5i4XYcwPkAfMqR98irSk" # Enter your telegram bot token
+OWNER_ID = "1925665092" # Enter your telegram user id
+TELEGRAM_API = "24844493" # Enter telegram API key
+TELEGRAM_HASH = "e668475d11b79872f14f0a669e57cdc1" # Enter telegram API hash
 
 # OPTIONAL CONFIG
-AUTHORIZED_CHATS = "" # Enter telegram chat id to authorize it
-SUDO_USERS = "" # Enter telegram user id for sudo access
+AUTHORIZED_CHATS = "-1002393797633" # Enter telegram chat id to authorize it
+SUDO_USERS = "1925665092" # Enter telegram user id for sudo access
 
-DATABASE_URL = "" # Enter mongo database URL for python 3.12 or higher
+DATABASE_URL = "mongodb+srv://khoshankyash6:NSa5ceYRciyLp0gI@cluster0.snsbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" # Enter mongo database URL for python 3.12 or higher
 USER_SESSION_STRING = "" # Check readme to learn how to generate this
 
 # Optional API
