--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ FILELION_API = ""
 STREAMWISH_API = ""
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1OLumVOK3IxBSiNPrReunhBVXJ66ZJoNS"
 INDEX_URL = ""
 IS_TEAM_DRIVE = "False" # True or False
 STOP_DUPLICATE = "True" # True or False
